--- a/gb/20/2/13/n11867185.md
+++ b/gb/20/2/13/n11867185.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zvfdhx385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zvfdhx385/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zvfdhx385/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zvfdhx385/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zvfdhx385/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zvfdhx385/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zvfdhx385/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zvfdhx385/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>脉冲光旋风—专访专业美容师Milan一探奥妙</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6232-600x400.jpg" />
 <h6>IPL可以解决皮肤斑点、皮肤颜色不均匀和毛孔粗大问题。(孙玉玟/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年02月14日讯】一个受到女性推崇的<ahref="https://github.com/zvfdhx385/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>（Intense Pulsed Light，简称IPL）是一种改善或去除皮肤色素沉淀或暗斑的美容方法，记者走访贝丽诗（Pure Bliss Medical SPA）专业美容师米兰（Milan Madison）一探究竟。</p>
-<h2>记者：什么是<ahref="https://github.com/zvfdhx385/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>（IPL）？</h2>
+	<p>【大纪元2020年02月14日讯】一个受到女性推崇的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>（Intense Pulsed Light，简称IPL）是一种改善或去除皮肤色素沉淀或暗斑的美容方法，记者走访贝丽诗（Pure Bliss Medical SPA）专业美容师米兰（Milan Madison）一探究竟。</p>
+<h2>记者：什么是<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>（IPL）？</h2>
 <p>米兰：IPL是Intense Pulsed Light，中文称为光子嫩肤或脉冲光。通过使用强脉冲光穿透皮肤的表层来减少日晒、老化皮肤斑点和色素深沈，显着改善细/皱纹、皮肤松弛和毛孔粗大等现象。这种方法与一般的激光（雷射）美容略不同，作法温和但效果显着。用仪器头针对色斑部位，以及破损的毛细血管处IPL强光穿透皮肤表面，打到真皮层，然后针对黑色素（melanin），把它推到皮肤的表面上，进而干燥后脱落。依照需求和色斑严重程度可以反复做治疗直到达到目标。</p>
 <h2>记者：做IPL治疗会痛吗？</h2>
 <p>米兰：有些美容坊会直接做但是比较痛；有些会先敷冰块，但是效果也很有限。贝丽诗美容中心希望最大减低客户的不适感，使用高端安全皮肤麻面霜液先将皮肤麻木，再抹上超声波凝胶保护皮肤层，IPL治疗过程中舒适安全，也会预防皮肤过热受伤。</p>
-<figure id="attachment_11867200" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6230.jpg"><img class="wp-image-11867200" src="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6230-600x450.jpg" alt="" width="500" b="375" /></a><figcaption class="wp-caption-text">IPL治疗轻松无痛感。(孙玉玟/大纪元）</figcaption></figure>
+<figure id="attachment_11867200" aria-describedby="caption-attachment-11867200" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6230.jpg"><img class="wp-image-11867200" src="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6230-600x450.jpg" alt="" width="500" b="375" /></a><figcaption id="caption-attachment-11867200" class="wp-caption-text">IPL治疗轻松无痛感。(孙玉玟/大纪元）</figcaption></figure>
 <h2>记者：亚裔的皮肤适合IPL美容方法吗？</h2>
 <p>米兰：亚裔的脸部皮肤特性有弹性、紧实，并且脂肪比例较高，所以一般平时保养的人不会出现过早老化或松弛现象。要注意一点的就是，有些亚裔皮肤容易晒黑，吸收到紫外线肤色立刻变深的肤质如果做了IPL可能会有伤害。所以要经过专业训练的美容师对每位客户做皮肤检测，详细了解客户情况才能进行，用在错的人皮肤上可能造成不可逆转的问题。如果没有以上问题，做IPL以后的皮肤可以变得洁净肤色均匀，皮肤紧实，毛细孔缩小，看起来年轻漂亮。</p>
 <h2>记者：IPL治疗中有什么样的感觉？</h2>
 <p>米兰：擦上麻木面霜之后15分钟皮肤已经无感，治疗过程中不会有疼痛感，有点亮和热的感觉。做完会发现色斑被IPL推向皮肤表面，几天后自然地脱落，这个过程会需要几天到一、二周时间。</p>
 <h2>记者：做完IPL是否造成皮肤发干？需要注意什么事项：</h2>
 <p>米兰：所有的雷射或强光美容都会让皮肤紧绷或有干燥感，其实做完皮肤治疗皮肤会自身激发大量胶原蛋白，皮肤在再生过程中发紧很正常。但是顾客做完脉冲光之后要特别注意皮肤的保湿和防晒，我们会送每位客户随身瓶的高保湿乳液以供随时使用。</p>
-<figure id="attachment_11867201" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6225.jpg"><img class="wp-image-11867201" src="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6225-600x450.jpg" alt="" width="500" b="375" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/zvfdhx385/djy/blob/master/gb/tag/%E8%B4%9D%E4%B8%BD%E8%AF%97%E5%8C%BB%E5%AD%A6%E7%BE%8E%E5%AE%B9%E4%B8%AD%E5%BF%83.md#1">贝丽诗医学美容中心</a>的<ahref="https://github.com/zvfdhx385/djy/blob/master/gb/tag/%E6%8A%A4%E8%82%A4.md#1">护肤</a>产品陈列。(孙玉玟/大纪元）</figcaption></figure>
-<p>做脉冲光IPL治疗前一定要找专业资深拥有执照的美容师咨询及治疗，避免对您的皮肤造成伤害。<ahref="https://github.com/zvfdhx385/djy/blob/master/gb/tag/%E8%B4%9D%E4%B8%BD%E8%AF%97%E5%8C%BB%E5%AD%A6%E7%BE%8E%E5%AE%B9%E4%B8%AD%E5%BF%83.md#1">贝丽诗医学美容中心</a>除了IPL治疗，还有一般面部护理、钻石磨皮真空换肤、微针、富血小板血浆（PRP）、脸部及头发干细胞疗法、激光换肤、光子嫩肤/IPL强脉冲光、激光除毛、蜘蛛血管治疗（脸部或腿部）、女性免手术泌尿改善。</p>
+<figure id="attachment_11867201" aria-describedby="caption-attachment-11867201" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6225.jpg"><img class="wp-image-11867201" src="https://i.epochtimes.com/assets/uploads/2020/02/IMG_6225-600x450.jpg" alt="" width="500" b="375" /></a><figcaption id="caption-attachment-11867201" class="wp-caption-text"><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B4%9D%E4%B8%BD%E8%AF%97%E5%8C%BB%E5%AD%A6%E7%BE%8E%E5%AE%B9%E4%B8%AD%E5%BF%83.md#1">贝丽诗医学美容中心</a>的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8A%A4%E8%82%A4.md#1">护肤</a>产品陈列。(孙玉玟/大纪元）</figcaption></figure>
+<p>做脉冲光IPL治疗前一定要找专业资深拥有执照的美容师咨询及治疗，避免对您的皮肤造成伤害。<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B4%9D%E4%B8%BD%E8%AF%97%E5%8C%BB%E5%AD%A6%E7%BE%8E%E5%AE%B9%E4%B8%AD%E5%BF%83.md#1">贝丽诗医学美容中心</a>除了IPL治疗，还有一般面部护理、钻石磨皮真空换肤、微针、富血小板血浆（PRP）、脸部及头发干细胞疗法、激光换肤、光子嫩肤/IPL强脉冲光、激光除毛、蜘蛛血管治疗（脸部或腿部）、女性免手术泌尿改善。</p>
 <p>更多信息可咨询Pure Bliss Medical SPA贝丽诗医学美容中心。<br />
 电话：281-318-1362<br />
 地址：<ahref="https://goo.gl/maps/GrgxqPvAnhkNy7GD7">1140 Business Center Dr., Suite 403, Houston, TX 77043</a><br />
@@ -29,42 +29,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zvfdhx385/djy/blob/master/gb/16/4/15/n7558424.md#1">“飙雪”一族 皮肤保养二三事</a></li>
-<li><a href="https://github.com/zvfdhx385/djy/blob/master/gb/16/12/21/n8612709.md#1">亚洲第一 照射过“脉冲光”的菇菇 上市了</a></li>
-<li><a href="https://github.com/zvfdhx385/djy/blob/master/gb/17/12/5/n9928892.md#1">学会这一招 葱蒜姜放半年都不会坏</a></li>
-<li><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/9/30/n10751260.md#1">换季干燥闹肌荒 保湿做足不发痒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/15/n7558424.md#1">“飙雪”一族 皮肤保养二三事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/12/21/n8612709.md#1">亚洲第一 照射过“脉冲光”的菇菇 上市了</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/12/5/n9928892.md#1">学会这一招 葱蒜姜放半年都不会坏</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/9/30/n10751260.md#1">换季干燥闹肌荒 保湿做足不发痒</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/zvfdhx385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10919284.md#1" target="_blank">陋兰：当告密者成为英雄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/18/n7908087.md#1" target="_blank">三次听法轮功真相 大陆公安腿病神奇康复</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/9/13/n12399763.md#1">既是“于青菜”又是“于青天”——清朝廉吏于成龙</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557454.md#1">【重播】促进宗教自由论坛：中共迫害法轮功</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12558640.md#1">【新闻大家谈】左翼威胁 关键一城惊人反转</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557446.md#1">【十字路口】中共介入大选 美国新独立战争？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552183.md#1">【翻墙必看】拜登又一大丑闻曝光 涉奥巴马</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554108.md#1">计算“邮寄选票”后反超   纽约众议员布朗斯汀宣布胜选</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553767.md#1">被央视污言秽语狂骂 蓬佩奥：继续制裁</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553368.md#1">台研发全球首株抗体 可直接杀死癌细胞</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552492.md#1">在教堂住12年 英国流浪猫过世获纪念仪式</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zvfdhx385/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zvfdhx385/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/13/n11867185.htm">脉冲光旋风—专访专业美容师Milan一探奥妙</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/13/n11867185.htm">脉冲光旋风—专访专业美容师Milan一探奥妙</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zvfdhx385/djy/blob/master/gb/20/2/13/n11867185.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zvfdhx385/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zvfdhx385/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zvfdhx385/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zvfdhx385/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zvfdhx385/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/2/13/n11867185.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
